tests/ui/borrowck/move_while_borrowed.rx
//@ spec: RXS-0060
struct T {
    id: i32,
}

fn eat(t: T) -> i32 {
    t.id
}

fn peek(r: &T) -> i32 {
    r.id
}

fn main() {
    let t = T { id: 1 };
    let r = &t;
    let _a = eat(t); //~ ERROR RX4005
    let _b = peek(r);
}
